Fix: Codemirror Editor Stuck on Millions of Lines of Content

--- a/apps/sendora.org/src/app/globals.css
+++ b/apps/sendora.org/src/app/globals.css
@@ -34,6 +34,7 @@ body:is(.dark *) {
 .cm-editor {
   border-radius: 14px;
   padding: 16px;
+  height: 100%;
 }
 
 table {
